--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,17 +1,17 @@
 {
-  "WEIGHTYCONTAINERS.SettingGMOnlyConfig": "Ограничить кнопку настройки для ГМ",
-  "WEIGHTYCONTAINERS.SettingGMOnlyConfigHint": "Если отмечено, только Мастер Игры сможет видеть и использовать кнопку настройки снижения веса на листах контейнеров.",
-  "WEIGHTYCONTAINERS.ConfigButtonTooltip": "Настроить Снижение Веса",
-  "WEIGHTYCONTAINERS.ConfigWindowTitle": "Настроить Снижение Веса Контейнера",
-  "WEIGHTYCONTAINERS.ConfigPrompt": "Введите процент снижения веса (0-100):",
-  "WEIGHTYCONTAINERS.ConfigSave": "Сохранить",
-  "WEIGHTYCONTAINERS.ConfigCancel": "Отмена",
-  "WEIGHTYCONTAINERS.InvalidPercentage": "Пожалуйста, введите корректный процент от 0 до 100.",
-  "WEIGHTYCONTAINERS.WeightReductionLabel": "Снижение веса:",
-  "WEIGHTYCONTAINERS.CapacityExceeded": "Невозможно добавить/увеличить предмет. Вместимость контейнера '{containerName}' превышена.",
-  "WEIGHTYCONTAINERS.CapacityWouldExceed": "Невозможно добавить/увеличить предмет. Вместимость контейнера '{containerName}' будет превышена.",
-  "WEIGHTYCONTAINERS.ItemWeightLabel": "Эффективный вес",
-  "WEIGHTYCONTAINERS.SettingCapacityMessageName": "Сообщение о превышении вместимости",
-  "WEIGHTYCONTAINERS.SettingCapacityMessageHint": "Текст уведомления, отображаемый при попытке превысить вместимость контейнера. Оставьте пустым для стандартного сообщения.",
-  "WEIGHTYCONTAINERS.ReducesCurrencyLabel": "Снижает вес валюты"
+  "CWM.SETTINGS.gmOnlyButton": "Настройка только для GM",
+  "CWM.SETTINGS.gmOnlyButtonHint": "Если отмечено, только Мастер Игры может получить доступ к кнопке настройки снижения веса на листах контейнеров.",
+  "CWM.ContainerSheet.ConfigureReduction": "Настроить Снижение",
+  "CWM.ContainerSheet.WeightReduction": "Снижение Веса",
+  "CWM.Dialog.SetReductionTitle": "Установить Снижение Веса",
+  "CWM.Dialog.SetReductionLabel": "Процент Снижения (0-100)",
+  "CWM.Dialog.SetReductionHint": "Введите процент, на который будет снижен вес предметов внутри этого контейнера.",
+  "CWM.Notifications.CapacityExceeded": "Невозможно добавить/увеличить предмет: Превышен лимит веса контейнера '{containerName}'.",
+  "CWM.Notifications.InvalidPercentage": "Некорректное значение процента. Пожалуйста, введите число от 0 до 100.",
+  "CWM.Rarity.Common": "Обычное",
+  "CWM.Rarity.Uncommon": "Необычное",
+  "CWM.Rarity.Rare": "Редкое",
+  "CWM.Rarity.VeryRare": "Очень Редкое",
+  "CWM.Rarity.Legendary": "Легендарное",
+  "CWM.Rarity.Artifact": "Артефакт"
 }
