--- a/lang/en.json
+++ b/lang/en.json
@@ -1,17 +1,17 @@
 {
-  "WEIGHTYCONTAINERS.SettingGMOnlyConfig": "Restrict Config Button to GM",
-  "WEIGHTYCONTAINERS.SettingGMOnlyConfigHint": "If checked, only the Game Master can see and use the weight reduction configuration button on container sheets.",
-  "WEIGHTYCONTAINERS.ConfigButtonTooltip": "Configure Weight Reduction",
-  "WEIGHTYCONTAINERS.ConfigWindowTitle": "Configure Container Weight Reduction",
-  "WEIGHTYCONTAINERS.ConfigPrompt": "Enter weight reduction percentage (0-100):",
-  "WEIGHTYCONTAINERS.ConfigSave": "Save",
-  "WEIGHTYCONTAINERS.ConfigCancel": "Cancel",
-  "WEIGHTYCONTAINERS.InvalidPercentage": "Please enter a valid percentage between 0 and 100.",
-  "WEIGHTYCONTAINERS.WeightReductionLabel": "Weight Reduction:",
-  "WEIGHTYCONTAINERS.CapacityExceeded": "Cannot add/increase item. Container '{containerName}' capacity exceeded.",
-  "WEIGHTYCONTAINERS.CapacityWouldExceed": "Cannot add/increase item. Container '{containerName}' capacity would be exceeded.",
-  "WEIGHTYCONTAINERS.ItemWeightLabel": "Effective Weight",
-  "WEIGHTYCONTAINERS.SettingCapacityMessageName": "Capacity Exceeded Message",
-  "WEIGHTYCONTAINERS.SettingCapacityMessageHint": "The notification message displayed when trying to exceed container capacity. Leave empty to use default system message (if available).",
-  "WEIGHTYCONTAINERS.ReducesCurrencyLabel": "Reduces Currency Weight"
+  "CWM.SETTINGS.gmOnlyButton": "GM Only Configuration",
+  "CWM.SETTINGS.gmOnlyButtonHint": "If checked, only the Gamemaster can access the weight reduction configuration button on container sheets.",
+  "CWM.ContainerSheet.ConfigureReduction": "Configure Reduction",
+  "CWM.ContainerSheet.WeightReduction": "Weight Reduction",
+  "CWM.Dialog.SetReductionTitle": "Set Weight Reduction",
+  "CWM.Dialog.SetReductionLabel": "Reduction Percentage (0-100)",
+  "CWM.Dialog.SetReductionHint": "Enter the percentage by which item weight should be reduced inside this container.",
+  "CWM.Notifications.CapacityExceeded": "Cannot add/increase item: Container '{containerName}' capacity exceeded.",
+  "CWM.Notifications.InvalidPercentage": "Invalid percentage value. Please enter a number between 0 and 100.",
+  "CWM.Rarity.Common": "Common",
+  "CWM.Rarity.Uncommon": "Uncommon",
+  "CWM.Rarity.Rare": "Rare",
+  "CWM.Rarity.VeryRare": "Very Rare",
+  "CWM.Rarity.Legendary": "Legendary",
+  "CWM.Rarity.Artifact": "Artifact"
 }
