--- a/lang/en.json
+++ b/lang/en.json
@@ -1,17 +1,17 @@
 {
-  "CWM.SETTINGS.gmOnlyButton": "GM Only Configuration",
-  "CWM.SETTINGS.gmOnlyButtonHint": "If checked, only the Gamemaster can access the weight reduction configuration button on container sheets.",
-  "CWM.ContainerSheet.ConfigureReduction": "Configure Reduction",
-  "CWM.ContainerSheet.WeightReduction": "Weight Reduction",
-  "CWM.Dialog.SetReductionTitle": "Set Weight Reduction",
-  "CWM.Dialog.SetReductionLabel": "Reduction Percentage (0-100)",
-  "CWM.Dialog.SetReductionHint": "Enter the percentage by which item weight should be reduced inside this container.",
-  "CWM.Notifications.CapacityExceeded": "Cannot add/increase item: Container '{containerName}' capacity exceeded.",
-  "CWM.Notifications.InvalidPercentage": "Invalid percentage value. Please enter a number between 0 and 100.",
-  "CWM.Rarity.Common": "Common",
-  "CWM.Rarity.Uncommon": "Uncommon",
-  "CWM.Rarity.Rare": "Rare",
-  "CWM.Rarity.VeryRare": "Very Rare",
-  "CWM.Rarity.Legendary": "Legendary",
-  "CWM.Rarity.Artifact": "Artifact"
+  "WEIGHTY_CONTAINERS.SETTINGS.gmOnlyButton": "GM Only Configuration",
+  "WEIGHTY_CONTAINERS.SETTINGS.gmOnlyButtonHint": "If checked, only the Gamemaster can access the weight reduction configuration button on container sheets.",
+  "WEIGHTY_CONTAINERS.ContainerSheet.ConfigureReduction": "Configure Reduction",
+  "WEIGHTY_CONTAINERS.ContainerSheet.WeightReduction": "Weight Reduction",
+  "WEIGHTY_CONTAINERS.Dialog.SetReductionTitle": "Set Weight Reduction",
+  "WEIGHTY_CONTAINERS.Dialog.SetReductionLabel": "Reduction Percentage (0-100)",
+  "WEIGHTY_CONTAINERS.Dialog.SetReductionHint": "Enter the percentage by which item weight should be reduced inside this container.",
+  "WEIGHTY_CONTAINERS.Notifications.CapacityExceeded": "Cannot add/increase item: Container '{containerName}' capacity exceeded.",
+  "WEIGHTY_CONTAINERS.Notifications.InvalidPercentage": "Invalid percentage value. Please enter a number between 0 and 100.",
+  "WEIGHTY_CONTAINERS.Rarity.Common": "Common",
+  "WEIGHTY_CONTAINERS.Rarity.Uncommon": "Uncommon",
+  "WEIGHTY_CONTAINERS.Rarity.Rare": "Rare",
+  "WEIGHTY_CONTAINERS.Rarity.VeryRare": "Very Rare",
+  "WEIGHTY_CONTAINERS.Rarity.Legendary": "Legendary",
+  "WEIGHTY_CONTAINERS.Rarity.Artifact": "Artifact"
 }
