--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,17 +1,17 @@
 {
-  "CWM.SETTINGS.gmOnlyButton": "Настройка только для GM",
-  "CWM.SETTINGS.gmOnlyButtonHint": "Если отмечено, только Мастер Игры может получить доступ к кнопке настройки снижения веса на листах контейнеров.",
-  "CWM.ContainerSheet.ConfigureReduction": "Настроить Снижение",
-  "CWM.ContainerSheet.WeightReduction": "Снижение Веса",
-  "CWM.Dialog.SetReductionTitle": "Установить Снижение Веса",
-  "CWM.Dialog.SetReductionLabel": "Процент Снижения (0-100)",
-  "CWM.Dialog.SetReductionHint": "Введите процент, на который будет снижен вес предметов внутри этого контейнера.",
-  "CWM.Notifications.CapacityExceeded": "Невозможно добавить/увеличить предмет: Превышен лимит веса контейнера '{containerName}'.",
-  "CWM.Notifications.InvalidPercentage": "Некорректное значение процента. Пожалуйста, введите число от 0 до 100.",
-  "CWM.Rarity.Common": "Обычное",
-  "CWM.Rarity.Uncommon": "Необычное",
-  "CWM.Rarity.Rare": "Редкое",
-  "CWM.Rarity.VeryRare": "Очень Редкое",
-  "CWM.Rarity.Legendary": "Легендарное",
-  "CWM.Rarity.Artifact": "Артефакт"
+  "WEIGHTY_CONTAINERS.SETTINGS.gmOnlyButton": "Настройка только для GM",
+  "WEIGHTY_CONTAINERS.SETTINGS.gmOnlyButtonHint": "Если отмечено, только Мастер Игры может получить доступ к кнопке настройки снижения веса на листах контейнеров.",
+  "WEIGHTY_CONTAINERS.ContainerSheet.ConfigureReduction": "Настроить Снижение",
+  "WEIGHTY_CONTAINERS.ContainerSheet.WeightReduction": "Снижение Веса",
+  "WEIGHTY_CONTAINERS.Dialog.SetReductionTitle": "Установить Снижение Веса",
+  "WEIGHTY_CONTAINERS.Dialog.SetReductionLabel": "Процент Снижения (0-100)",
+  "WEIGHTY_CONTAINERS.Dialog.SetReductionHint": "Введите процент, на который будет снижен вес предметов внутри этого контейнера.",
+  "WEIGHTY_CONTAINERS.Notifications.CapacityExceeded": "Невозможно добавить/увеличить предмет: Превышен лимит веса контейнера '{containerName}'.",
+  "WEIGHTY_CONTAINERS.Notifications.InvalidPercentage": "Некорректное значение процента. Пожалуйста, введите число от 0 до 100.",
+  "WEIGHTY_CONTAINERS.Rarity.Common": "Обычное",
+  "WEIGHTY_CONTAINERS.Rarity.Uncommon": "Необычное",
+  "WEIGHTY_CONTAINERS.Rarity.Rare": "Редкое",
+  "WEIGHTY_CONTAINERS.Rarity.VeryRare": "Очень Редкое",
+  "WEIGHTY_CONTAINERS.Rarity.Legendary": "Легендарное",
+  "WEIGHTY_CONTAINERS.Rarity.Artifact": "Артефакт"
 }
