--- a/lang/en.json
+++ b/lang/en.json
@@ -1,17 +1,16 @@
 {
-  "WEIGHTY_CONTAINERS.SETTINGS.gmOnlyButton": "GM Only Configuration",
-  "WEIGHTY_CONTAINERS.SETTINGS.gmOnlyButtonHint": "If checked, only the Gamemaster can access the weight reduction configuration button on container sheets.",
-  "WEIGHTY_CONTAINERS.ContainerSheet.ConfigureReduction": "Configure Reduction",
-  "WEIGHTY_CONTAINERS.ContainerSheet.WeightReduction": "Weight Reduction",
-  "WEIGHTY_CONTAINERS.Dialog.SetReductionTitle": "Set Weight Reduction",
-  "WEIGHTY_CONTAINERS.Dialog.SetReductionLabel": "Reduction Percentage (0-100)",
-  "WEIGHTY_CONTAINERS.Dialog.SetReductionHint": "Enter the percentage by which item weight should be reduced inside this container.",
-  "WEIGHTY_CONTAINERS.Notifications.CapacityExceeded": "Cannot add/increase item: Container '{containerName}' capacity exceeded.",
-  "WEIGHTY_CONTAINERS.Notifications.InvalidPercentage": "Invalid percentage value. Please enter a number between 0 and 100.",
-  "WEIGHTY_CONTAINERS.Rarity.Common": "Common",
-  "WEIGHTY_CONTAINERS.Rarity.Uncommon": "Uncommon",
-  "WEIGHTY_CONTAINERS.Rarity.Rare": "Rare",
-  "WEIGHTY_CONTAINERS.Rarity.VeryRare": "Very Rare",
-  "WEIGHTY_CONTAINERS.Rarity.Legendary": "Legendary",
-  "WEIGHTY_CONTAINERS.Rarity.Artifact": "Artifact"
+  "WEIGHTYCONTAINERS.SettingGMOnlyConfig": "Restrict Config Button to GM",
+  "WEIGHTYCONTAINERS.SettingGMOnlyConfigHint": "If checked, only the Game Master can see and use the weight reduction configuration button on container sheets.",
+  "WEIGHTYCONTAINERS.ConfigButtonTooltip": "Configure Weight Reduction",
+  "WEIGHTYCONTAINERS.ConfigWindowTitle": "Configure Container Weight Reduction",
+  "WEIGHTYCONTAINERS.ConfigPrompt": "Enter weight reduction percentage (0-100):",
+  "WEIGHTYCONTAINERS.ConfigSave": "Save",
+  "WEIGHTYCONTAINERS.ConfigCancel": "Cancel",
+  "WEIGHTYCONTAINERS.InvalidPercentage": "Please enter a valid percentage between 0 and 100.",
+  "WEIGHTYCONTAINERS.WeightReductionLabel": "Weight Reduction:",
+  "WEIGHTYCONTAINERS.CapacityExceeded": "Cannot add/increase item. Container '{containerName}' capacity exceeded.",
+  "WEIGHTYCONTAINERS.CapacityWouldExceed": "Cannot add/increase item. Container '{containerName}' capacity would be exceeded.",
+  "WEIGHTYCONTAINERS.ItemWeightLabel": "Effective Weight",
+  "WEIGHTYCONTAINERS.SettingCapacityMessageName": "Capacity Exceeded Message",
+  "WEIGHTYCONTAINERS.SettingCapacityMessageHint": "The notification message displayed when trying to exceed container capacity. Leave empty to use default system message (if available)."
 }
