--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,17 +1,16 @@
 {
-  "WEIGHTY_CONTAINERS.SETTINGS.gmOnlyButton": "Настройка только для GM",
-  "WEIGHTY_CONTAINERS.SETTINGS.gmOnlyButtonHint": "Если отмечено, только Мастер Игры может получить доступ к кнопке настройки снижения веса на листах контейнеров.",
-  "WEIGHTY_CONTAINERS.ContainerSheet.ConfigureReduction": "Настроить Снижение",
-  "WEIGHTY_CONTAINERS.ContainerSheet.WeightReduction": "Снижение Веса",
-  "WEIGHTY_CONTAINERS.Dialog.SetReductionTitle": "Установить Снижение Веса",
-  "WEIGHTY_CONTAINERS.Dialog.SetReductionLabel": "Процент Снижения (0-100)",
-  "WEIGHTY_CONTAINERS.Dialog.SetReductionHint": "Введите процент, на который будет снижен вес предметов внутри этого контейнера.",
-  "WEIGHTY_CONTAINERS.Notifications.CapacityExceeded": "Невозможно добавить/увеличить предмет: Превышен лимит веса контейнера '{containerName}'.",
-  "WEIGHTY_CONTAINERS.Notifications.InvalidPercentage": "Некорректное значение процента. Пожалуйста, введите число от 0 до 100.",
-  "WEIGHTY_CONTAINERS.Rarity.Common": "Обычное",
-  "WEIGHTY_CONTAINERS.Rarity.Uncommon": "Необычное",
-  "WEIGHTY_CONTAINERS.Rarity.Rare": "Редкое",
-  "WEIGHTY_CONTAINERS.Rarity.VeryRare": "Очень Редкое",
-  "WEIGHTY_CONTAINERS.Rarity.Legendary": "Легендарное",
-  "WEIGHTY_CONTAINERS.Rarity.Artifact": "Артефакт"
+  "WEIGHTYCONTAINERS.SettingGMOnlyConfig": "Ограничить кнопку настройки для ГМ",
+  "WEIGHTYCONTAINERS.SettingGMOnlyConfigHint": "Если отмечено, только Мастер Игры сможет видеть и использовать кнопку настройки снижения веса на листах контейнеров.",
+  "WEIGHTYCONTAINERS.ConfigButtonTooltip": "Настроить Снижение Веса",
+  "WEIGHTYCONTAINERS.ConfigWindowTitle": "Настроить Снижение Веса Контейнера",
+  "WEIGHTYCONTAINERS.ConfigPrompt": "Введите процент снижения веса (0-100):",
+  "WEIGHTYCONTAINERS.ConfigSave": "Сохранить",
+  "WEIGHTYCONTAINERS.ConfigCancel": "Отмена",
+  "WEIGHTYCONTAINERS.InvalidPercentage": "Пожалуйста, введите корректный процент от 0 до 100.",
+  "WEIGHTYCONTAINERS.WeightReductionLabel": "Снижение веса:",
+  "WEIGHTYCONTAINERS.CapacityExceeded": "Невозможно добавить/увеличить предмет. Вместимость контейнера '{containerName}' превышена.",
+  "WEIGHTYCONTAINERS.CapacityWouldExceed": "Невозможно добавить/увеличить предмет. Вместимость контейнера '{containerName}' будет превышена.",
+  "WEIGHTYCONTAINERS.ItemWeightLabel": "Эффективный вес",
+  "WEIGHTYCONTAINERS.SettingCapacityMessageName": "Сообщение о превышении вместимости",
+  "WEIGHTYCONTAINERS.SettingCapacityMessageHint": "Текст уведомления, отображаемый при попытке превысить вместимость контейнера. Оставьте пустым для стандартного сообщения."
 }
