--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,17 +1,17 @@
 {
-  "WEIGHTYCONTAINERS.SettingGMOnlyConfig": "Ограничить кнопку настройки для ГМ",
-  "WEIGHTYCONTAINERS.SettingGMOnlyConfigHint": "Если отмечено, только Мастер Игры сможет видеть и использовать кнопку настройки снижения веса на листах контейнеров.",
-  "WEIGHTYCONTAINERS.ConfigButtonTooltip": "Настроить Снижение Веса",
-  "WEIGHTYCONTAINERS.ConfigWindowTitle": "Настроить Снижение Веса Контейнера",
-  "WEIGHTYCONTAINERS.ConfigPrompt": "Введите процент снижения веса (0-100):",
+  "WEIGHTYCONTAINERS.SettingGMOnlyConfig": "Ограничить настройку только для ГМа",
+  "WEIGHTYCONTAINERS.SettingGMOnlyConfigHint": "Если включено, только Гейм Мастер может настраивать снижение веса для контейнеров.",
+  "WEIGHTYCONTAINERS.SettingCapacityMessageName": "Сообщение о превышении вместимости контейнера",
+  "WEIGHTYCONTAINERS.SettingCapacityMessageHint": "Настройте сообщение, отображаемое при превышении весовой вместимости контейнера.",
+  "WEIGHTYCONTAINERS.DefaultCapacityMessage": "Больно ты дохуя взял",
+  "WEIGHTYCONTAINERS.CapacityExceeded": "Вместимость контейнера превышена.",
+  "WEIGHTYCONTAINERS.WeightReductionLabel": "Снижение веса",
+  "WEIGHTYCONTAINERS.ConfigButtonTooltip": "Настроить снижение веса",
+  "WEIGHTYCONTAINERS.ConfigPrompt": "Процент снижения веса (0-100):",
+  "WEIGHTYCONTAINERS.ConfigWindowTitle": "Настройка снижения веса контейнера",
   "WEIGHTYCONTAINERS.ConfigSave": "Сохранить",
   "WEIGHTYCONTAINERS.ConfigCancel": "Отмена",
-  "WEIGHTYCONTAINERS.InvalidPercentage": "Пожалуйста, введите корректный процент от 0 до 100.",
-  "WEIGHTYCONTAINERS.WeightReductionLabel": "Снижение веса:",
-  "WEIGHTYCONTAINERS.CapacityExceeded": "Невозможно добавить/увеличить предмет. Вместимость контейнера '{containerName}' превышена.",
-  "WEIGHTYCONTAINERS.CapacityWouldExceed": "Невозможно добавить/увеличить предмет. Вместимость контейнера '{containerName}' будет превышена.",
-  "WEIGHTYCONTAINERS.ItemWeightLabel": "Эффективный вес",
-  "WEIGHTYCONTAINERS.SettingCapacityMessageName": "Сообщение о превышении вместимости",
-  "WEIGHTYCONTAINERS.SettingCapacityMessageHint": "Текст уведомления, отображаемый при попытке превысить вместимость контейнера. Оставьте пустым для стандартного сообщения.",
-  "WEIGHTYCONTAINERS.ErrorCalculatingWeight": "Ошибка при расчете веса предмета или контейнера."
+  "WEIGHTYCONTAINERS.InvalidPercentage": "Пожалуйста, введите действительный процент от 0 до 100.",
+  "WEIGHTYCONTAINERS.ErrorSaving": "Не удалось сохранить настройку снижения веса.",
+  "WEIGHTYCONTAINERS.ItemWeightLabel": "Эффективный вес"
 }
