--- a/lang/en.json
+++ b/lang/en.json
@@ -1,20 +1,22 @@
 {
-  "WEIGHTYCONTAINERS.SettingGMOnlyConfig": "Restrict Config Button to GM",
-  "WEIGHTYCONTAINERS.SettingGMOnlyConfigHint": "If checked, only the Game Master can see and use the weight reduction configuration button on container sheets.",
-  "WEIGHTYCONTAINERS.ConfigButtonTooltip": "Configure Weight Reduction",
-  "WEIGHTYCONTAINERS.ConfigWindowTitle": "Configure Container Weight Reduction",
-  "WEIGHTYCONTAINERS.ConfigPrompt": "Enter weight reduction percentage (0-100):",
-  "WEIGHTYCONTAINERS.ConfigSave": "Save",
-  "WEIGHTYCONTAINERS.ConfigCancel": "Cancel",
-  "WEIGHTYCONTAINERS.InvalidPercentage": "Please enter a valid percentage between 0 and 100.",
-  "WEIGHTYCONTAINERS.WeightReductionLabel": "Weight Reduction:",
-  "WEIGHTYCONTAINERS.CapacityExceeded": "Cannot add/increase item. Container '{container}' capacity exceeded.",
-  "WEIGHTYCONTAINERS.CapacityWouldExceed": "Cannot add/increase item. Container '{container}' capacity would be exceeded.",
-  "WEIGHTYCONTAINERS.ItemWeightLabel": "Effective Weight",
-  "WEIGHTYCONTAINERS.SettingCapacityMessageName": "Capacity Exceeded Message",
-  "WEIGHTYCONTAINERS.SettingCapacityMessageHint": "The notification message displayed when trying to exceed container capacity. Leave empty to use default system message (if available).",
-  "WEIGHTYCONTAINERS.DefaultCapacityMessage": "Cannot add {item}, {container} is full!",
-  "WEIGHTYCONTAINERS.ReductionSuffix": "Red.",
-  "WEIGHTYCONTAINERS.ConfigButtonLabel": "Config",
-  "WEIGHTYCONTAINERS.EffectiveAbbreviation": "Eff"
+    "WEIGHTYCONTAINERS.SettingGMOnlyConfig": "Restrict Config Button to GM",
+    "WEIGHTYCONTAINERS.SettingGMOnlyConfigHint": "If checked, only the Game Master can see and use the weight reduction configuration button on container sheets.",
+    "WEIGHTYCONTAINERS.ConfigButtonTooltip": "Configure Weight Reduction",
+    "WEIGHTYCONTAINERS.ConfigWindowTitle": "Configure Container Weight Reduction",
+    "WEIGHTYCONTAINERS.ConfigPrompt": "Enter weight reduction percentage (0-100):",
+    "WEIGHTYCONTAINERS.ConfigSave": "Save",
+    "WEIGHTYCONTAINERS.ConfigCancel": "Cancel",
+    "WEIGHTYCONTAINERS.InvalidPercentage": "Please enter a valid percentage between 0 and 100.",
+    "WEIGHTYCONTAINERS.WeightReductionLabel": "Weight Reduction:",
+    "WEIGHTYCONTAINERS.CapacityExceeded": "Cannot add/increase item. Container '{containerName}' capacity exceeded.",
+    "WEIGHTYCONTAINERS.CapacityWouldExceed": "Cannot add/increase item. Container '{containerName}' capacity would be exceeded.",
+    "WEIGHTYCONTAINERS.ItemWeightLabel": "Effective Weight",
+    "WEIGHTYCONTAINERS.SettingCapacityMessageName": "Capacity Exceeded Message",
+    "WEIGHTYCONTAINERS.SettingCapacityMessageHint": "The notification message displayed when trying to exceed container capacity. Leave empty to use default system message.",
+    "WEIGHTYCONTAINERS.SettingCurrencyDivisorName": "Currency Weight Divisor",
+    "WEIGHTYCONTAINERS.SettingCurrencyDivisorHint": "Number of coins equivalent to 1 pound (or 0.5 kg in metric). Default is 50.",
+    "WEIGHTYCONTAINERS.SettingProgressSelectorsName": "Progress Bar Selectors",
+    "WEIGHTYCONTAINERS.SettingProgressSelectorsHint": "CSS selectors for container progress bars. Modify only if using custom sheets (e.g., Plutonium or Item Piles).",
+    "WEIGHTYCONTAINERS.SettingValueSelectorsName": "Weight Value Selectors",
+    "WEIGHTYCONTAINERS.SettingValueSelectorsHint": "CSS selectors for container weight value displays. Modify only if using custom sheets."
 }
