--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,20 +1,22 @@
 {
-  "WEIGHTYCONTAINERS.SettingGMOnlyConfig": "Ограничить кнопку настройки для ГМ",
-  "WEIGHTYCONTAINERS.SettingGMOnlyConfigHint": "Если отмечено, только Мастер Игры сможет видеть и использовать кнопку настройки снижения веса на листах контейнеров.",
-  "WEIGHTYCONTAINERS.ConfigButtonTooltip": "Настроить Снижение Веса",
-  "WEIGHTYCONTAINERS.ConfigWindowTitle": "Настроить Снижение Веса Контейнера",
-  "WEIGHTYCONTAINERS.ConfigPrompt": "Введите процент снижения веса (0-100):",
-  "WEIGHTYCONTAINERS.ConfigSave": "Сохранить",
-  "WEIGHTYCONTAINERS.ConfigCancel": "Отмена",
-  "WEIGHTYCONTAINERS.InvalidPercentage": "Пожалуйста, введите корректный процент от 0 до 100.",
-  "WEIGHTYCONTAINERS.WeightReductionLabel": "Снижение веса:",
-  "WEIGHTYCONTAINERS.CapacityExceeded": "Невозможно добавить/увеличить предмет. Вместимость контейнера '{container}' превышена.",
-  "WEIGHTYCONTAINERS.CapacityWouldExceed": "Невозможно добавить/увеличить предмет. Вместимость контейнера '{container}' будет превышена.",
-  "WEIGHTYCONTAINERS.ItemWeightLabel": "Эффективный вес",
-  "WEIGHTYCONTAINERS.SettingCapacityMessageName": "Сообщение о превышении вместимости",
-  "WEIGHTYCONTAINERS.SettingCapacityMessageHint": "Текст уведомления, отображаемый при попытке превысить вместимость контейнера. Оставьте пустым для стандартного сообщения.",
-  "WEIGHTYCONTAINERS.DefaultCapacityMessage": "Невозможно добавить {item}, контейнер {container} полон!",
-  "WEIGHTYCONTAINERS.ReductionSuffix": "Сн.",
-  "WEIGHTYCONTAINERS.ConfigButtonLabel": "Настр.",
-  "WEIGHTYCONTAINERS.EffectiveAbbreviation": "Эфф."
+    "WEIGHTYCONTAINERS.SettingGMOnlyConfig": "Ограничить кнопку настройки для ГМ",
+    "WEIGHTYCONTAINERS.SettingGMOnlyConfigHint": "Если отмечено, только Мастер Игры сможет видеть и использовать кнопку настройки снижения веса на листах контейнеров.",
+    "WEIGHTYCONTAINERS.ConfigButtonTooltip": "Настроить Снижение Веса",
+    "WEIGHTYCONTAINERS.ConfigWindowTitle": "Настроить Снижение Веса Контейнера",
+    "WEIGHTYCONTAINERS.ConfigPrompt": "Введите процент снижения веса (0-100):",
+    "WEIGHTYCONTAINERS.ConfigSave": "Сохранить",
+    "WEIGHTYCONTAINERS.ConfigCancel": "Отмена",
+    "WEIGHTYCONTAINERS.InvalidPercentage": "Пожалуйста, введите корректный процент от 0 до 100.",
+    "WEIGHTYCONTAINERS.WeightReductionLabel": "Снижение веса:",
+    "WEIGHTYCONTAINERS.CapacityExceeded": "Невозможно добавить/увеличить предмет. Вместимость контейнера '{containerName}' превышена.",
+    "WEIGHTYCONTAINERS.CapacityWouldExceed": "Невозможно добавить/увеличить предмет. Вместимость контейнера '{containerName}' будет превышена.",
+    "WEIGHTYCONTAINERS.ItemWeightLabel": "Эффективный вес",
+    "WEIGHTYCONTAINERS.SettingCapacityMessageName": "Сообщение о превышении вместимости",
+    "WEIGHTYCONTAINERS.SettingCapacityMessageHint": "Текст уведомления, отображаемый при попытке превысить вместимость контейнера. Оставьте пустым для стандартного сообщения.",
+    "WEIGHTYCONTAINERS.SettingCurrencyDivisorName": "Делитель веса валюты",
+    "WEIGHTYCONTAINERS.SettingCurrencyDivisorHint": "Количество монет, эквивалентное 1 фунту (или 0.5 кг в метрической системе). По умолчанию 50.",
+    "WEIGHTYCONTAINERS.SettingProgressSelectorsName": "Селекторы прогресс-бара",
+    "WEIGHTYCONTAINERS.SettingProgressSelectorsHint": "CSS-селекторы для прогресс-баров контейнеров. Изменяйте только при использовании кастомных листов (например, Plutonium или Item Piles).",
+    "WEIGHTYCONTAINERS.SettingValueSelectorsName": "Селекторы значений веса",
+    "WEIGHTYCONTAINERS.SettingValueSelectorsHint": "CSS-селекторы для отображения значений веса контейнеров. Изменяйте только при использовании кастомных листов."
 }
