--- a/lang/en.json
+++ b/lang/en.json
@@ -1,22 +1,31 @@
 {
-    "WEIGHTYCONTAINERS.SettingGMOnlyConfig": "Restrict Config Button to GM",
-    "WEIGHTYCONTAINERS.SettingGMOnlyConfigHint": "If checked, only the Game Master can see and use the weight reduction configuration button on container sheets.",
-    "WEIGHTYCONTAINERS.ConfigButtonTooltip": "Configure Weight Reduction",
-    "WEIGHTYCONTAINERS.ConfigWindowTitle": "Configure Container Weight Reduction",
-    "WEIGHTYCONTAINERS.ConfigPrompt": "Enter weight reduction percentage (0-100):",
-    "WEIGHTYCONTAINERS.ConfigSave": "Save",
-    "WEIGHTYCONTAINERS.ConfigCancel": "Cancel",
-    "WEIGHTYCONTAINERS.InvalidPercentage": "Please enter a valid percentage between 0 and 100.",
-    "WEIGHTYCONTAINERS.WeightReductionLabel": "Weight Reduction:",
-    "WEIGHTYCONTAINERS.CapacityExceeded": "Cannot add/increase item. Container '{containerName}' capacity exceeded.",
-    "WEIGHTYCONTAINERS.CapacityWouldExceed": "Cannot add/increase item. Container '{containerName}' capacity would be exceeded.",
-    "WEIGHTYCONTAINERS.ItemWeightLabel": "Effective Weight",
-    "WEIGHTYCONTAINERS.SettingCapacityMessageName": "Capacity Exceeded Message",
-    "WEIGHTYCONTAINERS.SettingCapacityMessageHint": "The notification message displayed when trying to exceed container capacity. Leave empty to use default system message.",
-    "WEIGHTYCONTAINERS.SettingCurrencyDivisorName": "Currency Weight Divisor",
-    "WEIGHTYCONTAINERS.SettingCurrencyDivisorHint": "Number of coins equivalent to 1 pound (or 0.5 kg in metric). Default is 50.",
-    "WEIGHTYCONTAINERS.SettingProgressSelectorsName": "Progress Bar Selectors",
-    "WEIGHTYCONTAINERS.SettingProgressSelectorsHint": "CSS selectors for container progress bars. Modify only if using custom sheets (e.g., Plutonium or Item Piles).",
-    "WEIGHTYCONTAINERS.SettingValueSelectorsName": "Weight Value Selectors",
-    "WEIGHTYCONTAINERS.SettingValueSelectorsHint": "CSS selectors for container weight value displays. Modify only if using custom sheets."
+  "weighty-containers.enforceMode.name": "Behavior on exceed",
+  "weighty-containers.enforceMode.hint": "Block (cancel) or only warn when a container would exceed capacity.",
+  "weighty-containers.enforceMode.block": "Block",
+  "weighty-containers.enforceMode.warn": "Warn only",
+  "weighty-containers.includeNested.name": "Include nested containers",
+  "weighty-containers.includeNested.hint": "Include nested containers' weights in parent load.",
+  "weighty-containers.logLevel.name": "Log level",
+  "weighty-containers.logLevel.hint": "Set the logging level for diagnostics.",
+  "weighty-containers.logLevel.off": "Off",
+  "weighty-containers.logLevel.error": "Error",
+  "weighty-containers.logLevel.warn": "Warn",
+  "weighty-containers.logLevel.info": "Info",
+  "weighty-containers.logLevel.debug": "Debug",
+  "weighty-containers.logLevel.trace": "Trace",
+  "weighty-containers.logStacks.name": "Include stack traces",
+  "weighty-containers.logStacks.hint": "Include stack traces in logs.",
+  "weighty-containers.logBufferLimit.name": "Log buffer size",
+  "weighty-containers.logBufferLimit.hint": "Maximum number of log entries to keep in buffer.",
+  "weighty-containers.exceedMessageText.name": "Exceed notification text (per-user)",
+  "weighty-containers.exceedMessageText.hint": "Exact text to show when capacity would be exceeded. Leave empty for default detailed message.",
+  "weighty-containers.exceedMessage.default": "[{containerName}] Capacity exceeded: {before} + {delta} > {capacity} lb",
+  "weighty-containers.reductionBtn.label": "Reduction",
+  "weighty-containers.inlineGear.title": "Container Weight Reduction",
+  "weighty-containers.reductionDialog.title": "Container Weight Reduction",
+  "weighty-containers.reductionDialog.label": "Reduction (%)",
+  "weighty-containers.reductionDialog.notes": "Applies to items directly inside this container. Nested containers apply their own reduction.",
+  "weighty-containers.reductionDialog.save": "Save",
+  "weighty-containers.reductionDialog.cancel": "Cancel",
+  "weighty-containers.reductionSet.notification": "Reduction set to {pct}% for \"{containerName}\""
 }
