--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,22 +1,31 @@
 {
-    "WEIGHTYCONTAINERS.SettingGMOnlyConfig": "Ограничить кнопку настройки для ГМ",
-    "WEIGHTYCONTAINERS.SettingGMOnlyConfigHint": "Если отмечено, только Мастер Игры сможет видеть и использовать кнопку настройки снижения веса на листах контейнеров.",
-    "WEIGHTYCONTAINERS.ConfigButtonTooltip": "Настроить Снижение Веса",
-    "WEIGHTYCONTAINERS.ConfigWindowTitle": "Настроить Снижение Веса Контейнера",
-    "WEIGHTYCONTAINERS.ConfigPrompt": "Введите процент снижения веса (0-100):",
-    "WEIGHTYCONTAINERS.ConfigSave": "Сохранить",
-    "WEIGHTYCONTAINERS.ConfigCancel": "Отмена",
-    "WEIGHTYCONTAINERS.InvalidPercentage": "Пожалуйста, введите корректный процент от 0 до 100.",
-    "WEIGHTYCONTAINERS.WeightReductionLabel": "Снижение веса:",
-    "WEIGHTYCONTAINERS.CapacityExceeded": "Невозможно добавить/увеличить предмет. Вместимость контейнера '{containerName}' превышена.",
-    "WEIGHTYCONTAINERS.CapacityWouldExceed": "Невозможно добавить/увеличить предмет. Вместимость контейнера '{containerName}' будет превышена.",
-    "WEIGHTYCONTAINERS.ItemWeightLabel": "Эффективный вес",
-    "WEIGHTYCONTAINERS.SettingCapacityMessageName": "Сообщение о превышении вместимости",
-    "WEIGHTYCONTAINERS.SettingCapacityMessageHint": "Текст уведомления, отображаемый при попытке превысить вместимость контейнера. Оставьте пустым для стандартного сообщения.",
-    "WEIGHTYCONTAINERS.SettingCurrencyDivisorName": "Делитель веса валюты",
-    "WEIGHTYCONTAINERS.SettingCurrencyDivisorHint": "Количество монет, эквивалентное 1 фунту (или 0.5 кг в метрической системе). По умолчанию 50.",
-    "WEIGHTYCONTAINERS.SettingProgressSelectorsName": "Селекторы прогресс-бара",
-    "WEIGHTYCONTAINERS.SettingProgressSelectorsHint": "CSS-селекторы для прогресс-баров контейнеров. Изменяйте только при использовании кастомных листов (например, Plutonium или Item Piles).",
-    "WEIGHTYCONTAINERS.SettingValueSelectorsName": "Селекторы значений веса",
-    "WEIGHTYCONTAINERS.SettingValueSelectorsHint": "CSS-селекторы для отображения значений веса контейнеров. Изменяйте только при использовании кастомных листов."
+  "weighty-containers.enforceMode.name": "Поведение при превышении",
+  "weighty-containers.enforceMode.hint": "Блокировать (отменять) или только предупреждать, когда контейнер превысит вместимость.",
+  "weighty-containers.enforceMode.block": "Блокировать",
+  "weighty-containers.enforceMode.warn": "Только предупреждать",
+  "weighty-containers.includeNested.name": "Учитывать вложенные контейнеры",
+  "weighty-containers.includeNested.hint": "Включать вес вложенных контейнеров в нагрузку родительского контейнера.",
+  "weighty-containers.logLevel.name": "Уровень логирования",
+  "weighty-containers.logLevel.hint": "Установить уровень логирования для диагностики.",
+  "weighty-containers.logLevel.off": "Выкл",
+  "weighty-containers.logLevel.error": "Ошибка",
+  "weighty-containers.logLevel.warn": "Предупреждение",
+  "weighty-containers.logLevel.info": "Информация",
+  "weighty-containers.logLevel.debug": "Отладка",
+  "weighty-containers.logLevel.trace": "Трассировка",
+  "weighty-containers.logStacks.name": "Включать трассировку стека",
+  "weighty-containers.logStacks.hint": "Включать трассировку стека в логи.",
+  "weighty-containers.logBufferLimit.name": "Размер буфера логов",
+  "weighty-containers.logBufferLimit.hint": "Максимальное количество записей логов в буфере.",
+  "weighty-containers.exceedMessageText.name": "Текст уведомления о превышении (для пользователя)",
+  "weighty-containers.exceedMessageText.hint": "Точный текст для отображения при превышении вместимости. Оставьте пустым для сообщения по умолчанию.",
+  "weighty-containers.exceedMessage.default": "[{containerName}] Превышена вместимость: {before} + {delta} > {capacity} фунтов",
+  "weighty-containers.reductionBtn.label": "Снижение",
+  "weighty-containers.inlineGear.title": "Снижение веса контейнера",
+  "weighty-containers.reductionDialog.title": "Снижение веса контейнера",
+  "weighty-containers.reductionDialog.label": "Снижение (%)",
+  "weighty-containers.reductionDialog.notes": "Применяется к предметам непосредственно внутри этого контейнера. Вложенные контейнеры применяют собственное снижение.",
+  "weighty-containers.reductionDialog.save": "Сохранить",
+  "weighty-containers.reductionDialog.cancel": "Отмена",
+  "weighty-containers.reductionSet.notification": "Снижение установлено на {pct}% для \"{containerName}\""
 }
