--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,31 +1,31 @@
 {
-  "weighty-containers.enforceMode.name": "Поведение при превышении",
-  "weighty-containers.enforceMode.hint": "Блокировать (отменять) или только предупреждать, когда контейнер превысит вместимость.",
-  "weighty-containers.enforceMode.block": "Блокировать",
-  "weighty-containers.enforceMode.warn": "Только предупреждать",
-  "weighty-containers.includeNested.name": "Учитывать вложенные контейнеры",
-  "weighty-containers.includeNested.hint": "Включать вес вложенных контейнеров в нагрузку родительского контейнера.",
-  "weighty-containers.logLevel.name": "Уровень логирования",
-  "weighty-containers.logLevel.hint": "Установить уровень логирования для диагностики.",
-  "weighty-containers.logLevel.off": "Выкл",
-  "weighty-containers.logLevel.error": "Ошибка",
-  "weighty-containers.logLevel.warn": "Предупреждение",
-  "weighty-containers.logLevel.info": "Информация",
-  "weighty-containers.logLevel.debug": "Отладка",
-  "weighty-containers.logLevel.trace": "Трассировка",
-  "weighty-containers.logStacks.name": "Включать трассировку стека",
-  "weighty-containers.logStacks.hint": "Включать трассировку стека в логи.",
-  "weighty-containers.logBufferLimit.name": "Размер буфера логов",
-  "weighty-containers.logBufferLimit.hint": "Максимальное количество записей логов в буфере.",
-  "weighty-containers.exceedMessageText.name": "Текст уведомления о превышении (для пользователя)",
-  "weighty-containers.exceedMessageText.hint": "Точный текст для отображения при превышении вместимости. Оставьте пустым для сообщения по умолчанию.",
-  "weighty-containers.exceedMessage.default": "[{containerName}] Превышена вместимость: {before} + {delta} > {capacity} фунтов",
-  "weighty-containers.reductionBtn.label": "Снижение",
-  "weighty-containers.inlineGear.title": "Снижение веса контейнера",
-  "weighty-containers.reductionDialog.title": "Снижение веса контейнера",
-  "weighty-containers.reductionDialog.label": "Снижение (%)",
-  "weighty-containers.reductionDialog.notes": "Применяется к предметам непосредственно внутри этого контейнера. Вложенные контейнеры применяют собственное снижение.",
-  "weighty-containers.reductionDialog.save": "Сохранить",
-  "weighty-containers.reductionDialog.cancel": "Отмена",
-  "weighty-containers.reductionSet.notification": "Снижение установлено на {pct}% для \"{containerName}\""
+  "weighty-containers.enforceMode.name": "Behavior on exceed",
+  "weighty-containers.enforceMode.hint": "Block (cancel) or only warn when a container would exceed capacity.",
+  "weighty-containers.enforceMode.block": "Block",
+  "weighty-containers.enforceMode.warn": "Warn only",
+  "weighty-containers.includeNested.name": "Include nested containers",
+  "weighty-containers.includeNested.hint": "Include nested containers' weights in parent load.",
+  "weighty-containers.logLevel.name": "Log level",
+  "weighty-containers.logLevel.hint": "Set the logging level for diagnostics.",
+  "weighty-containers.logLevel.off": "Off",
+  "weighty-containers.logLevel.error": "Error",
+  "weighty-containers.logLevel.warn": "Warn",
+  "weighty-containers.logLevel.info": "Info",
+  "weighty-containers.logLevel.debug": "Debug",
+  "weighty-containers.logLevel.trace": "Trace",
+  "weighty-containers.logStacks.name": "Include stack traces",
+  "weighty-containers.logStacks.hint": "Include stack traces in logs.",
+  "weighty-containers.logBufferLimit.name": "Log buffer size",
+  "weighty-containers.logBufferLimit.hint": "Maximum number of log entries to keep in buffer.",
+  "weighty-containers.exceedMessageText.name": "Exceed notification text (per-user)",
+  "weighty-containers.exceedMessageText.hint": "Exact text to show when capacity would be exceeded. Leave empty for default detailed message.",
+  "weighty-containers.exceedMessage.default": "[{containerName}] Capacity exceeded: {before} + {delta} > {capacity} lb",
+  "weighty-containers.reductionBtn.label": "Reduction",
+  "weighty-containers.inlineGear.title": "Container Weight Reduction",
+  "weighty-containers.reductionDialog.title": "Container Weight Reduction",
+  "weighty-containers.reductionDialog.label": "Reduction (%)",
+  "weighty-containers.reductionDialog.notes": "Applies to items directly inside this container. Nested containers apply their own reduction.",
+  "weighty-containers.reductionDialog.save": "Save",
+  "weighty-containers.reductionDialog.cancel": "Cancel",
+  "weighty-containers.reductionSet.notification": "Reduction set to {pct}% for \"{containerName}\""
 }
